Server side auth added

--- a/DateApp/appsettings.json
+++ b/DateApp/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "AppSettings" : {
+     "Token" :  "secret key for JWT token *1!0*!;.*-2Q@"
+  },
   "ConnectionStrings": {
-    "DefaultConnection" :  "Data Source=DatingApp.db"
+    "DefaultConnection": "Data Source=DatingApp.db"
   },
   "Logging": {
     "LogLevel": {
